修复了add device的bug，和完善了前端UI